# detective

./: pyproject.toml
jupyter/: train.ipynb
jupyter/.ipynb_checkpoints/: train-checkpoint.ipynb
jupyter/sentiment_analysis/logistic-regression/.ipynb_checkpoints/: train-checkpoint.ipynb
jupyter/sentiment_analysis/test1/: train.ipynb
jupyter/sentiment_analysis/test2/: train.ipynb
jupyter/sentiment_analysis/test2/.ipynb_checkpoints/: train-checkpoint.ipynb
jupyter/sentiment_analysis/vader_and_roberta/: train.ipynb
jupyter/sentiment_analysis/vader_and_roberta/.ipynb_checkpoints/: train-checkpoint.ipynb
