[tool.poetry]
name = "detective"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
eli5 = "^0.13.0"
lime = "^0.2.0.1"
neattext = "^0.1.3"
spacy = "^3.6.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
